2012-03-01  Dirk Pranke  <dpranke@chromium.org>

        webkitpy: test_run_test_pause_before_testing is failing after r109482
        https://bugs.webkit.org/show_bug.cgi?id=80084

        Unreviewed, build fix.

        Fixes the test string compare to ignore the time spent running
        the tests.

        * Scripts/webkitpy/performance_tests/perftestsrunner_unittest.py:
        (test_run_test_pause_before_testing):

2012-03-01  Dirk Pranke  <dpranke@chromium.org>

        nrwt: virtual tests aren't being run
        https://bugs.webkit.org/show_bug.cgi?id=80083

        Reviewed by Eric Seidel.

        If we tried to run all of the tests by default (and
        didn't specify any paths), the virtual tests weren't
        picked up.

        * Scripts/webkitpy/layout_tests/port/base.py:
        (Port._virtual_tests):
        * Scripts/webkitpy/layout_tests/port/base_unittest.py:
        (PortTest.test_tests):
        * Scripts/webkitpy/layout_tests/port/test.py:
        (TestPort.virtual_test_suites):

2012-03-01  Ryosuke Niwa  <rniwa@webkit.org>

        run-perf-tests should report the test runtime
        https://bugs.webkit.org/show_bug.cgi?id=80078

        Reviewed by Hajime Morita.

        Record and output the aggreated test run time.

        * Scripts/webkitpy/performance_tests/perftestsrunner.py:
        (PerfTestsRunner._run_single_test):

2012-03-01  Michael Nordman  <michaeln@google.com>

        [chromium] Use webkit_support to create session storage namespaces in DRT.
        https://bugs.webkit.org/show_bug.cgi?id=79933

        Reviewed by Tony Chang.

        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::createSessionStorageNamespace):

2012-03-01  Dirk Pranke  <dpranke@chromium.org>

        nrwt: test_isfile, test_isdir, and test_exists don't work for virtual tests
        https://bugs.webkit.org/show_bug.cgi?id=80048

        Reviewed by Adam Barth.

        * Scripts/webkitpy/layout_tests/port/base.py: