@@ -1,3 +1,15 @@
+2012-03-01  Adam Barth  <abarth@webkit.org>
+
+        Unreviewed, rolling out r109317.
+        http://trac.webkit.org/changeset/109317
+
+        Let's try watchlists again now that we're using a pure git
+        working copy
+
+        * Scripts/webkitpy/tool/bot/stylequeuetask.py:
+        (StyleQueueTask.run):
+        * Scripts/webkitpy/tool/commands/queues_unittest.py:
+
 2012-03-01  Dirk Pranke  <dpranke@chromium.org>
 
         webkitpy: test_run_test_pause_before_testing is failing after r109482
